Contract functionality draft

--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
     "@tonconnect/sdk": "^2.0.7",
     "@tonconnect/ui-react": "^0.0.14",
     "@twa-dev/sdk": "^6.4.2",
+    "base64url": "^3.0.1",
     "buffer": "^6.0.3",
     "is-mobile": "^3.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "sass": "^1.58.3",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
-    "ton": "13.3.0",
+    "ton": "^13.3.0",
     "ton-core": "^0.46.0",
     "ton-crypto": "^3.2.0",
     "use-local-storage": "^2.3.6",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
