--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@mantine/core": "^5.10.5",
     "@mantine/hooks": "^5.10.5",
     "@orbs-network/ton-access": "^2.2.2",
+    "@react-three/drei": "^9.57.3",
+    "@react-three/fiber": "^8.12.0",
     "@tabler/icons": "^2.5.0",
     "@tanstack/react-query": "^4.24.4",
     "@tonconnect/sdk": "^2.0.7",
     "@tonconnect/ui-react": "^0.0.14",
     "@twa-dev/sdk": "^6.4.2",
+    "@types/three": "^0.149.0",
     "base64url": "^3.0.1",
     "buffer": "^6.0.3",
     "is-mobile": "^3.1.1",
@@ -31,6 +34,7 @@
     "sass": "^1.58.3",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
+    "three": "^0.150.1",
     "ton": "^13.3.0",
     "ton-core": "^0.46.0",
     "ton-crypto": "^3.2.0",
